--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/clothify/image/upload/v1574208952/facebook-logo_biobli.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Clothify</title>
   </head>
